# deep-lora-transformers

./: .gitignore  README.md  benchmark.py  configs.py  data.py  deep_lora_plots.ipynb  fewshot_benchmark.py  finetune.py  full_data_benchmark.py  glue_fewshot_benchmark.py  intro.ipynb  intro.py  intro_plots.ipynb  logging_utils.py  main.py  metrics.py  model_utils.py  models.py  plot.ipynb  plot.py  plot_utils.py  pyproject.toml  setup.py  stsb_fewshot.py  stsb_narrow.py  stsb_save_checkpoint.py  stsb_varying_rank.py  test.ipynb  test.py  train.py  utils.py
dlt/: configs.py  data.py  data_utils.py  finetune.py  logging_utils.py  metrics.py  misc_utils.py  model_utils.py  models.py  plot_utils.py  train.py
experiments/stsb_fewshot_16_narrow_vs_wide/stsb_lora_type=all-dense_depth=3_rank=8_samples=16_lr=0.0001_steps=200_seed=0/: config.json
experiments/stsb_lora_type=attention-mlp_depth=3_lr=0.0001_steps=2000_seed=0_intro/: results.json
glue/: configs.py  data.py  finetune.py  glue_fewshot_benchmark.py  intro_plots.ipynb  models.py  plot_utils.py  stsb_fewshot.py  stsb_narrow.py  stsb_save_checkpoint.py  stsb_varying_rank.py  train.py  utils.py
scripts/: glue_fewshot.py  intro.py  nlg_fewshot.py  stsb_fewshot.py  stsb_narrow.py  stsb_save_checkpoint.py  stsb_varying_rank.py  summarization_fewshot.py  test.py
stsb_lora_depth=2/: config.json
stsb_lora_depth=2_rank=8/: config.json
stsb_lora_depth=3/: config.json
stsb_lora_depth=3_samples=4/: config.json
summarization/: configs.py  data.py  test.ipynb  train.py  utils.py
(+939 files in other folders)
