[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlt"]

[project]
name = "dlt"
version = "0.0.1"
dependencies = [
    "dataclasses-json",
    "scikit-learn",
    "jax[cpu];platform_system=='Darwin'",
    "jax[cuda12];platform_system=='Linux'",
    "transformers",
    "datasets",
    "evaluate",
    "flax",
    "nltk",
    "matplotlib",
    "tensorflow",
    "rouge_score",
    "tf-keras",
    "seaborn",
]
requires-python = ">=3.11"
authors = [
  {name = "Can Yaras", email = "cjyaras@gmail.com"},
]
description = "Deep Lora."
readme = "README.md"
license = {file = "LICENSE"}
keywords = []